# django-user-payments

./: .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  setup.cfg  setup.py  stripe_subscriptions_moocher.txt  tox.ini
docs/: conf.py  index.rst  installation.rst  payments.rst  processing.rst  stripe-customers.rst  subscriptions.rst
tests/testapp/: customer.json  moochers.py  processing.py  settings.py  test_moocher.py  test_payments.py  test_processing.py  test_stripe.py  test_subscription_utils.py  test_subscriptions.py  urls.py
user_payments/: __init__.py  admin.py  apps.py  exceptions.py  models.py  processing.py  processors.py
user_payments/management/: base.py
user_payments/management/commands/: process_payments.py
user_payments/migrations/: 0001_initial.py  0002_auto_20180517_0932.py
user_payments/stripe_customers/: __init__.py  admin.py  apps.py  models.py  moocher.py  moochers.py  processing.py
user_payments/stripe_customers/migrations/: 0001_initial.py
user_payments/stripe_customers/templatetags/: stripe_subscriptions_tags.py
user_payments/user_subscriptions/: __init__.py  admin.py  apps.py  models.py  utils.py
user_payments/user_subscriptions/migrations/: 0001_initial.py  0002_auto_20180515_1351.py  0004_auto_20180517_1435.py  0005_auto_20180517_1441.py  0007_auto_20180517_1954.py  (+4 more)
user_subscriptions/: __init__.py  admin.py  apps.py  models.py  utils.py
user_subscriptions/migrations/: 0002_auto_20180515_1351.py  0003_subscriptionperiod_line_item.py  0006_auto_20180517_0932.py  0007_auto_20180517_1954.py
(+6 files in other folders)
