[metadata]
name = django_user_payments
version = attr: user_payments.__version__
description = User payments and subscriptions for Django
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/matthiask/django-user-payments/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = BSD-3-Clause
license_file = LICENSE
platforms = OS Independent
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
install_requires =
    django-mooch>=0.6
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
tests =
    coverage
    stripe>=2
stripe =
    stripe>=2

[coverage:run]
branch = True
include =
    *user_payments*
    *tests*
omit =
    *migrations*
    *.tox*
